--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,7 +6,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: ./gradlew test
-      - uses: actions/upload-artifact@v2
+      - if: always()
+        uses: actions/upload-artifact@v1
         with:
-          name: test-results
+          name: server-test-results
           path: build/reports/tests/test/
